--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/connorjburton/hmac-auth-express#readme",
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "27.0.0-next.8"
   }
 }
