updating workflows to use both linux and windows, and to also publish on workflow action rather than merge into master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,26 @@ name: Node.js CI
 on: [push, pull_request]
 
 jobs:
-  build:
+  buildlinux:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version:  [12.x, 14.x, 15.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: yarn audit
+    - run: yarn
+    - run: yarn test
+  buildlinux:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        node-version:  [12.x, 14.x, 15.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - uses: actions/checkout@v2
