--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,5 @@
-name: Node.js Package
-on:
-  push:
-    branches: 'master'
+name: Build & release package onto NPM
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,9 +8,9 @@ jobs:
     # Setup .npmrc file to publish to npm
     - uses: actions/setup-node@v2
       with:
-        node-version: '12.x'
+        node-version: '16.x'
         registry-url: 'https://registry.npmjs.org'
-    - run: npm install
-    - run: npm publish
+    - run: yarn
+    - run: yarn publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
