--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest tests"
+    "test": "jest tests"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,17 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "body-parser": "^1.19.0",
+    "eslint": "^7.30.0",
+    "express": "^4.17.1",
+    "got": "^11.8.2",
     "husky": "^6.0.0",
-    "jest": "27.0.6"
+    "jest": "27.0.6",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   }
 }
