--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
-    "body-parser": "^1.19.0",
     "eslint": "^7.30.0",
     "express": "^4.17.1",
     "got": "^11.8.2",
-    "husky": "^6.0.0",
+    "husky": "7.0.0",
     "jest": "27.0.6",
+    "standard-version": "^9.3.0",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5",
-    "standard-version": "^9.3.0"
+    "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "express": "^4.0.0"
   },
   "resolutions": {
-    "standard-version/**/meow/trim-newlines": "4.0.1"
+    "standard-version/**/meow/trim-newlines": "4.0.2"
   }
 }
