--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest tests",
+    "benchmark": "tsc && node benchmark",
     "release": "standard-version"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
