--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,10 @@
             "type": "node",
             "request": "launch",
             "name": "Jest All",
-            "program": "${workspaceFolder}/node_modules/.bin/jest",
-            "args": ["--runInBand"],
+            "runtimeExecutable": "yarn",
+            "runtimeArgs": ["test"],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
-            "disableOptimisticBPs": true,
-            "windows": {
-              "program": "${workspaceFolder}/node_modules/jest/bin/jest",
-            }
           }
     ]
 }
