feat: allow secret parameter to be a function to support dynamic secrets (#66)
* feat: allow secret parameter to be a function to support dynamic secrets

* refactor: creating a determineSecret function to clean up logic in middleware

* chore(release): 8.2.0

* docs: add details about dynamic secret function

* docs: fixing accepted type markdown format for secret

* docs: changing accepted type table again

* docs: removing else example from error handling and updating package json with keywords & desc

* docs: remove unnecessary word from dynamic secret description

* docs: adding alternatively word to dynamic secret

Co-authored-by: James Salloway <james@jmsalloway.co.uk>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "hmac-auth-express",
-  "version": "8.1.0",
-  "description": "",
+  "version": "8.2.0",
+  "description": "This package provides Express middleware for HMAC authentication",
+  "keywords": ["nodejs", "javascript", "middleware", "express", "node", "authentication", "express-middleware", "auth", "hmac"],
   "main": "dist/src/index.js",
   "typings": "dist/src",
   "scripts": {
