--- a/package.json
+++ b/package.json
@@ -34,26 +34,26 @@
   },
   "homepage": "https://github.com/connorjburton/hmac-auth-express#readme",
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.30.0",
-    "express": "^4.17.1",
-    "got": "^11.8.2",
-    "husky": "7.0.0",
-    "jest": "27.0.6",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "express": "^4.17.2",
+    "got": "11.8.3",
+    "husky": "^7.0.0",
+    "jest": "^27.4.7",
     "standard-version": "^9.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
     "express": "^4.0.0"
   },
   "resolutions": {
-    "standard-version/**/meow/trim-newlines": "4.0.2"
+    "jest/**/tmpl": "1.0.5"
   },
   "dependencies": {
     "fast-json-stable-stringify": "^2.1.0"
