--- a/package.json
+++ b/package.json
@@ -55,7 +55,5 @@
   "resolutions": {
     "jest/**/tmpl": "1.0.5"
   },
-  "dependencies": {
-    "fast-json-stable-stringify": "^2.1.0"
-  }
+  "dependencies": {}
 }
