--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
     "express": "^4.17.2",
-    "got": "11.8.3",
+    "got": "^12.0.1",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "standard-version": "^9.3.0",
