--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "standard-version": "^9.3.0",
+    "typedoc": "^0.22.12",
     "typescript": "^4.6.2"
   },
   "peerDependencies": {
     "express": "^4.0.0"
-  },
-  "dependencies": {}
+  }
 }
