--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,5 +18,6 @@ jobs:
       run: |
         git config --global user.name "Connor Burton"
         git config --global user.email "connorjburton@users.noreply.github.com"
-        git commit -am "chore(docs): update typedocs after release"
+        git add .
+        git commit -m "chore(docs): update typedocs after release"
         git push
