--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,14 +10,14 @@ jobs:
         node-version: '16.x'
         registry-url: 'https://registry.npmjs.org'
     - run: yarn
-    # - run: npm publish
-    #   env:
-    #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     - run: yarn typedoc src
     - name: Publish docs
       run: |
         git config --global user.name "Connor Burton"
         git config --global user.email "connorjburton@users.noreply.github.com"
         git add .
-        git commit -m "chore(docs): update typedocs after release"
+        git commit -m "chore(docs): automated update typedocs after release"
         git push
