--- a/package.json
+++ b/package.json
@@ -1,56 +1,65 @@
 {
-  "name": "hmac-auth-express",
-  "version": "8.2.0",
-  "description": "This package provides Express middleware for HMAC authentication",
-  "keywords": [
-    "nodejs",
-    "javascript",
-    "middleware",
-    "express",
-    "node",
-    "authentication",
-    "express-middleware",
-    "auth",
-    "hmac"
-  ],
-  "main": "dist/src/index.js",
-  "typings": "dist/src",
-  "scripts": {
-    "pretest": "tsc",
-    "prebenchmark": "tsc",
-    "prepare": "tsc",
-    "test": "jest dist/tests",
-    "benchmark": "node dist/benchmark",
-    "release": "standard-version"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/connorjburton/hmac-auth-express.git"
-  },
-  "author": "Connor Burton",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/connorjburton/hmac-auth-express/issues"
-  },
-  "homepage": "https://github.com/connorjburton/hmac-auth-express#readme",
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@types/express": "^4.17.12",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.10.0",
-    "express": "^4.17.3",
-    "got": "^11.8.3",
-    "husky": "^7.0.0",
-    "jest": "^27.5.1",
-    "standard-version": "^9.3.0",
-    "typedoc": "^0.22.12",
-    "typescript": "^4.6.2"
-  },
-  "peerDependencies": {
-    "express": "^4.0.0"
-  }
+    "name": "hmac-auth-express",
+    "version": "8.2.0",
+    "description": "This package provides Express middleware for HMAC authentication",
+    "keywords": [
+        "nodejs",
+        "javascript",
+        "middleware",
+        "express",
+        "node",
+        "authentication",
+        "express-middleware",
+        "auth",
+        "hmac"
+    ],
+    "main": "dist/src/index.js",
+    "typings": "dist/src",
+    "scripts": {
+        "pretest": "tsc",
+        "prebenchmark": "tsc",
+        "prepare": "tsc",
+        "lint:check": "yarn eslint",
+        "lint:fix": "yarn eslint --fix",
+        "style:check": "yarn prettier . --check",
+        "style:fix": "yarn prettier . --write",
+        "test": "jest dist/tests",
+        "benchmark": "node dist/benchmark",
+        "release": "standard-version"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/connorjburton/hmac-auth-express.git"
+    },
+    "author": "Connor Burton",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/connorjburton/hmac-auth-express/issues"
+    },
+    "homepage": "https://github.com/connorjburton/hmac-auth-express#readme",
+    "prettier": {
+        "tabWidth": 4,
+        "singleQuote": true
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^16.2.1",
+        "@commitlint/config-conventional": "^16.2.1",
+        "@types/express": "^4.17.12",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^17.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "eslint": "^8.10.0",
+        "express": "^4.17.3",
+        "got": "^11.8.3",
+        "husky": "^7.0.0",
+        "jest": "^27.5.1",
+        "prettier": "^2.5.1",
+        "standard-version": "^9.3.0",
+        "typedoc": "^0.22.12",
+        "typescript": "^4.6.2"
+    },
+    "peerDependencies": {
+        "express": "^4.0.0"
+    }
 }
