docs: updating docs wording to make more sense for generating type doc

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-            - run: yarn typedoc src
+            - run: yarn docs
             - name: Publish docs
               run: |
                   git config --global user.name "Connor Burton"
