--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "main": "dist/src/index.js",
     "typings": "dist/src",
     "scripts": {
-        "pretest": "tsc",
         "prebenchmark": "tsc",
         "prepare": "tsc",
         "docs": "yarn typedoc src",
@@ -24,7 +23,7 @@
         "lint:fix": "yarn eslint --fix",
         "style:check": "yarn prettier . --check",
         "style:fix": "yarn prettier . --write",
-        "test": "jest dist/tests",
+        "test": "jest ./tests",
         "benchmark": "node dist/benchmark",
         "release": "standard-version"
     },
@@ -42,8 +41,14 @@
         "tabWidth": 4,
         "singleQuote": true
     },
+    "babel": {
+        "targetss": {
+            "node": "latest"
+        }
+    },
     "jest": {
         "testEnvironment": "node",
+        "preset": "ts-jest",
         "coverageThreshold": {
             "global": {
                 "branches": 100,
@@ -68,6 +73,7 @@
         "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "standard-version": "^9.3.0",
+        "ts-jest": "^27.1.3",
         "typedoc": "^0.22.12",
         "typescript": "^4.6.2"
     },
