--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
         "auth",
         "hmac"
     ],
-    "main": "dist/src/index.js",
-    "typings": "dist/src",
+    "main": "./dist/index.js",
+    "typings": "./dist",
     "scripts": {
-        "prebenchmark": "tsc",
         "prepare": "tsc",
         "docs": "yarn typedoc src",
         "lint:check": "yarn eslint",
@@ -24,7 +23,7 @@
         "style:check": "yarn prettier . --check",
         "style:fix": "yarn prettier . --write",
         "test": "jest ./tests",
-        "benchmark": "node dist/benchmark",
+        "benchmark": "ts-node ./benchmark/index.ts",
         "release": "standard-version"
     },
     "repository": {
@@ -74,6 +73,7 @@
         "prettier": "^2.5.1",
         "standard-version": "^9.3.0",
         "ts-jest": "^27.1.3",
+        "ts-node": "^10.7.0",
         "typedoc": "^0.22.12",
         "typescript": "^4.6.2"
     },
