--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hmac-auth-express",
-    "version": "8.3.0",
+    "version": "8.3.1",
     "description": "This package provides Express middleware for HMAC authentication",
     "keywords": [
         "nodejs",
@@ -13,19 +13,17 @@
         "auth",
         "hmac"
     ],
-    "main": "dist/src/index.js",
-    "typings": "dist/src",
+    "main": "./dist/index.js",
+    "typings": "./dist",
     "scripts": {
-        "pretest": "tsc",
-        "prebenchmark": "tsc",
         "prepare": "tsc",
         "docs": "yarn typedoc src",
         "lint:check": "yarn eslint",
         "lint:fix": "yarn eslint --fix",
         "style:check": "yarn prettier . --check",
         "style:fix": "yarn prettier . --write",
-        "test": "jest dist/tests",
-        "benchmark": "node dist/benchmark",
+        "test": "jest ./tests",
+        "benchmark": "ts-node ./benchmark/index.ts",
         "release": "standard-version"
     },
     "repository": {
@@ -42,22 +40,41 @@
         "tabWidth": 4,
         "singleQuote": true
     },
+    "babel": {
+        "targets": {
+            "node": "latest"
+        }
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "preset": "ts-jest",
+        "coverageThreshold": {
+            "global": {
+                "branches": 100,
+                "functions": 100,
+                "lines": 100,
+                "statements": 100
+            }
+        }
+    },
     "devDependencies": {
         "@commitlint/cli": "^16.2.1",
         "@commitlint/config-conventional": "^16.2.1",
         "@types/express": "^4.17.12",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.8",
-        "@typescript-eslint/eslint-plugin": "^5.13.0",
-        "@typescript-eslint/parser": "^5.13.0",
-        "eslint": "^8.10.0",
+        "@typescript-eslint/eslint-plugin": "^5.14.0",
+        "@typescript-eslint/parser": "^5.14.0",
+        "eslint": "^8.11.0",
         "express": "^4.17.3",
         "got": "^11.8.3",
         "husky": "^7.0.0",
         "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "standard-version": "^9.3.0",
-        "typedoc": "^0.22.12",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.7.0",
+        "typedoc": "^0.22.13",
         "typescript": "^4.6.2"
     },
     "peerDependencies": {
