--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "@typescript-eslint/parser": "^5.52.0",
         "eslint": "^8.34.0",
         "express": "^4.18.2",
-        "got": "^12.5.3",
+        "got": "11.8.6",
         "husky": "^8.0.3",
         "jest": "^29.4.2",
         "prettier": "^2.8.4",
@@ -79,5 +79,8 @@
     },
     "peerDependencies": {
         "express": "^4.0.0"
+    },
+    "resolutions": {
+        "got/**/cacheable-request": "10.2.7"
     }
 }
