--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: yarn audit
+            # - run: yarn audit
             - run: yarn
             - run: yarn lint:check
             - run: yarn style:check
