ci: add new release workflow via semantic-release

--- a/package.json
+++ b/package.json
@@ -71,9 +71,35 @@
             }
         }
     },
+    "release": {
+        "branches": [
+            "master"
+        ],
+        "plugins": [
+            "@semantic-release/commit-analyzer",
+            "@semantic-release/release-notes-generator",
+            "@semantic-release/npm",
+            "@semantic-release/changelog",
+            [
+                "@semantic-release/git",
+                {
+                    "assets": [
+                        "package.json",
+                        "CHANGELOG.md"
+                    ],
+                    "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                }
+            ],
+            "@semantic-release/github"
+        ]
+    },
     "devDependencies": {
         "@commitlint/cli": "^17.4.3",
         "@commitlint/config-conventional": "^17.4.3",
+        "@semantic-release/changelog": "^6.0.2",
+        "@semantic-release/commit-analyzer": "^9.0.2",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/release-notes-generator": "^10.0.3",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.4.0",
         "@types/node": "^18.13.0",
@@ -85,7 +111,7 @@
         "husky": "^8.0.3",
         "jest": "^29.4.2",
         "prettier": "^2.8.4",
-        "standard-version": "^9.5.0",
+        "semantic-release": "^20.1.0",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typedoc": "^0.23.25",
