--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         "style:check": "yarn prettier . --check",
         "style:fix": "yarn prettier . --write",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js ./tests",
-        "benchmark": "ts-node ./benchmark/index.ts",
-        "release": "standard-version"
+        "benchmark": "ts-node ./benchmark/index.ts"
     },
     "repository": {
         "type": "git",
