--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hmac-auth-express",
   "version": "8.3.4",
-  "description": "This package provides Express middleware for HMAC authentication",
+  "description": "Express middleware for HMAC authentication",
   "keywords": [
     "nodejs",
     "javascript",
