--- a/package.json
+++ b/package.json
@@ -38,34 +38,6 @@
     "url": "https://github.com/connorjburton/hmac-auth-express/issues"
   },
   "homepage": "https://github.com/connorjburton/hmac-auth-express#readme",
-  "babel": {
-    "targets": {
-      "node": "latest"
-    }
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "preset": "ts-jest",
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "transform": {
-      "\\.ts?$": [
-        "ts-jest",
-        {
-          "useESM": true
-        }
-      ]
-    },
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    }
-  },
   "release": {
     "branches": [
       "master"
@@ -96,21 +68,17 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.13.0",
+    "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "express": "^4.18.2",
-    "got": "11.8.6",
+    "got": "^13.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.4.2",
     "prettier": "^2.8.4",
     "semantic-release": "^20.1.0",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.25",
-    "typescript": "^4.9.5"
+    "typedoc": "^0.25.1",
+    "typescript": "5.2.2"
   },
   "peerDependencies": {
     "express": "^4.0.0"
