--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hmac-auth-express",
+  "type": "module",
   "version": "8.3.4",
   "description": "Express middleware for HMAC authentication",
   "keywords": [
