--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "yarn eslint --fix",
     "style:check": "yarn prettier . --check",
     "style:fix": "yarn prettier . --write",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js ./tests",
+    "test": "./scripts/run-tests.sh",
     "benchmark": "ts-node ./benchmark/index.ts"
   },
   "repository": {
