--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         run: yarn lint:check
       - name: Check Coding Style
         run: yarn style:check
+      - name: Run benchmark
+        run: yarn benchmark
       - name: Test with Coverage
         run: |
           # Check coverage, if coverage is below 100% for any files exit & print a message
