build(deps): swap from yarn to npm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: yarn
+        run: npm
       - name: Check Linting
-        run: yarn lint:check
+        run: npm lint:check
       - name: Check Coding Style
-        run: yarn style:check
+        run: npm style:check
       - name: Test with Coverage
         run: |
           # Check coverage, if coverage is below 100% for any files exit & print a message
-          yarn test --experimental-test-coverage > test-output.txt
+          npm test -- --experimental-test-coverage > test-output.txt
 
           cat test-output.txt
 
