ci: use npm ci to install packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: npm
+        run: npm ci
       - name: Check Linting
         run: npm run lint:check
       - name: Check Coding Style
